Saved CSS Design

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <title>Felisilda_Ryan_Act_Project</title>
+  <link rel="stylesheet" href="style.css">
   
   <head>
     <body>
