Add Profile Picture

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <div class="container">
      
       <p class="bio">BIODATA</p>
+      <img src="rhy.jpg"></img>
        <p class="info">
        <b>Name:</b> Ryan Asibal Felisilda<br>
        <b>Date of Birth:</b> September 10, 2002<br>
