Add Favorite Audio and Video

--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
       </p>
       </div>
       
+ <p class="bio">My Favorite Music:</p>
+      <audio src="Grateful.mp3" controls></audio>
+      <p class="bio">My Favorite Video:</p>
+      <video src="Luffy.mp4" controls></video>
      
     </body>
   </head>
