--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
         <h1>College of Computer Studies</h1>
         <h2>BSIT-3 BLOCK-3</h2>
         <hr>
+
+       <p id="datetime">.</p>
        
 <div class="container">
      
@@ -63,4 +65,6 @@
     </body>
   </head>
 </html>
+
+<script src="script.js"></script>
 
